--- a/demos/2DMapExample/index.html
+++ b/demos/2DMapExample/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>tiles Editor</title>
+    <title>wfc2d Example</title>
     <script src="../../bin/wfc2D.js"></script>
     <script src="../lib/system.js"></script>
     <script src="../lib/jszip.js"></script>
