--- a/demos/2DMapEditor/index.html
+++ b/demos/2DMapEditor/index.html
@@ -25,7 +25,7 @@
             border: 10px double #bbbbbb;
         }
     </style>
-    <div style="height: 110px;">
+    <div style="height: auto;">
         <li id="importFolderLi" style="list-style-type: none;">
             加载 (本地文件夹)<input type="file" id="selectFiles" style="height: 30px;" multiple webkitdirectory />
         </li>
@@ -40,10 +40,15 @@
         </li>
         <!-- <input type="button" id="import" value="导入"/> -->
         <li id="exportLi" style="list-style-type: none;">
-            导出 <input type="button" id="exportFiles" value="开始" style="height: 30px; width: 80px;" />
+            导出 <input type="button" id="exportFiles" value="开始" style="height: 30px; width: 80px;" /> <br />
+            <form >
+                编辑模式:<input type="radio" id="viewEditorMode" name="viewMType" checked="checked" value="1"
+                    style="height: 20px; width: 20px;" />
+                状态模式:<input type="radio" id="viewDeActiveMode" name="viewMType" value="2" style="height: 20px; width: 20px;" />
+            </form>
         </li>
         <li id="SWOptionLi" style="list-style-type: none;">
-            ----------------------- 操作选项 ----------------------------<br/>
+            ----------------------- 操作选项 ----------------------------<br />
             <input type="button" id="swOptionAll" value="全选" style="height: 20px; width: 50px;" />
             <input type="button" id="swOptionCancel" value="全取消" style="height: 20px; width: 50px;" />
         </li>
