1.资源增加 2.文档修改

--- a/demos/2DMapEditor/index.html
+++ b/demos/2DMapEditor/index.html
@@ -32,8 +32,9 @@
         <li id="importSampleLi" style="list-style-type: none;">
             加载 (样例)
             <select id="selectOption">
-                <option value="test">test</option>
                 <option value="Circuit">Circuit</option>
+                <option value="Summer">Summer</option>
+                <option value="test">test</option>
             </select>
             <input type="button" id="importFiles" value="开始" style="height: 30px; width: 80px;" multiple
                 webkitdirectory />
