--- a/demos/2DMapEditor/index.html
+++ b/demos/2DMapEditor/index.html
@@ -34,6 +34,7 @@
             <select id="selectOption">
                 <option value="Circuit">Circuit</option>
                 <option value="Summer">Summer</option>
+                <option value="Carcassonne">Carcassonne</option>
                 <option value="test">test</option>
             </select>
             <input type="button" id="importFiles" value="开始" style="height: 30px; width: 80px;" multiple
