--- a/demos/2DMapExample/index.html
+++ b/demos/2DMapExample/index.html
@@ -37,6 +37,7 @@
             加载 (样例)
             <select id="selectOption">
                 <option value="Circuit">Circuit</option>
+                <option value="Carcassonne">Carcassonne</option>
                 <option value="Summer">Summer</option>
                 <option value="test">test</option>
             </select>
