可视化 过程基础

--- a/demos/algorithmVisualization/index.html
+++ b/demos/algorithmVisualization/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>A* FindPath</title>
     <script src="../lib/system.js"></script>
-    <script src="../../bin/wfc2D.js"></script>
+    <!-- <script src="../../bin/wfc2D.js"></script> -->
+    <script src="./lib/wfc2D_processVer.js"></script>
     <script src="../lib/immutable.min.js"></script>
     <script src="./bin/command.js"></script>
     <script src="./bin/main.js"></script>
