可视化 基本

--- a/demos/algorithmVisualization/index.html
+++ b/demos/algorithmVisualization/index.html
@@ -35,7 +35,7 @@
     </style>
 
     <li class="cube_view_div" style="list-style-type: none; ">
-        <div class="rootContain" id="rootcont" style="background: #333333">
+        <div class="rootContain" id="rootcont" style="background: #333333 ; border: 2px solid #0d94ff; ">
         </div>
     </li>
 
