--- a/demos/algorithmVisualization/index.html
+++ b/demos/algorithmVisualization/index.html
@@ -19,8 +19,8 @@
 
     <style>
         .rootContain {
-            width: 460px;
-            height: 560px;
+            width: 500px;
+            height: 500px;
             margin: 0 auto;
         }
 
@@ -57,12 +57,18 @@
         </div>
     </li>
 
+
     <li style="list-style-type: none;height: 100px;">
+        <a style="position: absolute; left: 0 ;right: 120px ; width: 40px; height: 10px; margin: auto; margin-top: 3px">speed</a>
+        <input id="btn_speed" type="number"
+            style="position: absolute; left: 0 ;right: 0 ; width: 40px; height: 10px; margin: auto; margin-top: 5px"
+            value="10"></input>
+        <br />
         <input id="btn_generate" type="button"
-                style="position: absolute; left: 0 ;right: 0 ; width: 80px; height: 36px; margin: auto; margin-top: 5px"
-                value="生成" /> 
-                <br />
-    
+            style="position: absolute; left: 0 ;right: 0 ; width: 80px; height: 36px; margin: auto; margin-top: 5px"
+            value="生成" />
+        <br />
+
         <font size="3"
             style="position: absolute;width: 50%; left: 0 ;right: 0 ; margin: auto; margin-top: 20px; text-align:center">
             click button to generate map
@@ -75,7 +81,7 @@
     </li>
 
     <li id="tiles_view" style="list-style-type: none; height:auto; width: auto;">
-        
+
     </li>
 
     <script>
