html title adjust

--- a/demos/algorithmVisualization/index.html
+++ b/demos/algorithmVisualization/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>A* FindPath</title>
+    <title>wfc2d 算法过程可视化</title>
     <script src="../lib/system.js"></script>
     <!-- <script src="../../bin/wfc2D.js"></script> -->
     <script src="./lib/wfc2D_processVer.js"></script>
