endless Map add

--- a/demos/2DMapEditor/index.html
+++ b/demos/2DMapEditor/index.html
@@ -36,6 +36,7 @@
                 <option value="Summer">Summer</option>
                 <option value="Carcassonne">Carcassonne</option>
                 <option value="test">test</option>
+                <option value="Village">Village</option>
             </select>
             <input type="button" id="importFiles" value="开始" style="height: 30px; width: 80px;" multiple
                 webkitdirectory />
