--- a/demos/2DMapExample/index.html
+++ b/demos/2DMapExample/index.html
@@ -39,6 +39,7 @@
                 <option value="Circuit">Circuit</option>
                 <option value="Carcassonne">Carcassonne</option>
                 <option value="Summer">Summer</option>
+                <option value="Village">Village</option>
                 <option value="test">test</option>
             </select>
         </li>
