--- a/demos/2DMapExample/index.html
+++ b/demos/2DMapExample/index.html
@@ -35,7 +35,7 @@
         </li>
         <li id="importSampleLi" style="list-style-type: none;">
             加载 (样例)
-            <select id="selectOption">
+            <select id="importSampleSelectOption">
                 <option value="Circuit">Circuit</option>
                 <option value="Carcassonne">Carcassonne</option>
                 <option value="Summer">Summer</option>
@@ -47,11 +47,20 @@
             webkitdirectory />
         <li id="SWOptionLi" style="list-style-type: none;">
             ----------------------- 操作选项 ----------------------------<br />
+            <li id="seamlessModeLi" style="list-style-type: none;">
+                无缝图模式
+                <select id="seamlessModeSelectOption">
+                    <option value="None">无</option>
+                    <option value="Vertical">垂直方向</option>
+                    <option value="Horizontal">水平方向</option>
+                </select>
+            </li>
+
             尺寸<input type="number" id="tilePixel" value="25" style="height: 20px; width: 50px;" />(tile 像素大小)<br />
             
             宽<input type="number" id="tileXCount" value="30" style="height: 20px; width: 50px;" />
             高<input type="number" id="tileYCount" value="30" style="height: 20px; width: 50px;" />(tile数量)<br />
-            最大回退<input type="number" id="backoffMax" value="300" step="10" style="height: 20px; width: 50px;" />
+            最大回退<input type="number" id="backoffMax" value="1000" step="10" style="height: 20px; width: 50px;" />
             回退缓存数<input type="number" id="backoffQueueMax" value="3" style="height: 20px; width: 50px;" />
             缓存率<input type="number" id="backoffCapRate" value="0.02" step="0.05" min="0" max="1" style="height: 20px; width: 50px;" />
         </li>
